apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {
    ndkVersion "${NDK_VERSION}"
    namespace 'cc.shinichi.library'
    compileSdkVersion 34
    defaultConfig {
        minSdkVersion 24
        targetSdkVersion 34
        multiDexEnabled true
        ndk {
            abiFilter "armeabi-v7a"
            abiFilter "arm64-v8a"
            abiFilter "x86"
            abiFilter "x86_64"
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    externalNativeBuild {
        ndkBuild {
            path "src/main/jni/Android.mk"
        }
    }
    sourceSets {
        main {
            jni.srcDirs = []
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    packagingOptions {
        jniLibs {
            useLegacyPackaging true
        }
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.exifinterface:exifinterface:1.3.5'
    implementation "androidx.core:core-ktx:1.6.0"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"

    // glide
    def glideVersion = "4.16.0"
    implementation "com.github.bumptech.glide:glide:${glideVersion}"
    annotationProcessor "com.github.bumptech.glide:compiler:${glideVersion}"
    implementation "com.github.bumptech.glide:okhttp3-integration:${glideVersion}"
    // https://mvnrepository.com/artifact/org.aomedia.avif.android/avif
    api 'org.aomedia.avif.android:avif:1.1.1.14d8e3c4'
    api("com.github.bumptech.glide:avif-integration:${glideVersion}") {
        exclude group: 'org.aomedia.avif.android', module: 'avif'
    }

    // ExoPlayer https://developer.android.com/media/media3/exoplayer/hello-world?hl=zh-cn#groovy
    def media3Version = "1.4.1"
    implementation "androidx.media3:media3-exoplayer:${media3Version}"
    implementation "androidx.media3:media3-exoplayer-dash:${media3Version}"
    implementation "androidx.media3:media3-ui:${media3Version}"
}